    allows the compiler to safely elide boundedness checks for special
    variables.
  * new feature: SB-EXT:GLOBAL proclamation inhibits SPECIAL proclamations for
    the symbol, prohibits both lexical and dynamic binding. This is mainly an
    efficiency measure for threaded platforms, but also valueable in
    expressing intent.
  * improvement: SBCL now emits a compiler note where stack allocation was
    requested but could not be provided.
  * optimization: compiler now generates faster array typechecking code.
  * optimization: ARRAY-DIMENSION is now faster for multidimensional and
    non-simple arrays.
  * optimization: multidimensional array accesses in the absence of type
    information regarding array rank are approximately 10% faster due to
    open coding of ARRAY-RANK.
  * documentation: CLOS slot typechecing policy has been documented.
  * bug fix: potential miscompilation of array stack allocation on x86 and
    x86-64. (reported by Time Tossavainen)
  * bug fix: some forms of AND, OR, and COND resulted in expansions that could
    result in their subforms being treated as top level forms. (reported by
    James Knight)
  * bug fix: On x86/x86-64 alien functions declared to return integers shorter
    than a machine register could leave garbage in the high bits of the
    result register (bug 316325).
  * bug fix: disable address space randomization Linux/x86-64 as well,
    not just x86-64. (reported by Ken Olum)
  * bug fix: Attempting to DEREF an (ALIEN (* T)) would produce a WARNING and
    generate incorrect code.
  * bug fix: #201; type inference for CONS and ARRAY types could derive
    wrong results in the presence of eg. RPLACA or ADJUST-ARRAY.
  * bug fix: special variables with a proclaimed specific subtype of FUNCTION
    could not be assigned to or bound with PROGV. (reported by Lorenz
    Mösenlechner)
  * bug fix: the value of CL:- in the inspector was the previous expression